[tool.poetry]
name = "pe-on-flask"
version = "0.1.0"
description = ""
authors = ["Yoshioka <sss.yoshioka@gmail.com>"]
readme = "README.md"
packages = [{include = "pe_on_flask"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
