[tool.poetry]
name = "pe-on-flask"
version = "0.1.0"
description = ""
authors = ["Yoshioka <sss.yoshioka@gmail.com>"]
readme = "README.md"
packages = [{include = "pe_on_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pysen = {version = "^0.10.4", extras = ["lint"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
